base/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synesis-gateway
  labels:
    app.kubernetes.io/part-of: synesis
